--- a/styles.css
+++ b/styles.css
@@ -98,13 +98,13 @@ li {
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 3;
+    z-index: 100;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: all 300ms ease;
     visibility: hidden;
     opacity: 0;
+    transition: all 300ms ease;
 }
 
 .menu--open .menu__backdrop {
@@ -201,6 +201,8 @@ button:active {
     z-index: 2;
     display: flex;
     justify-content: center;
+    height: 100%;
+    max-height: 50vh;
 }
 
 .container {
